Info window: number of selected objects not updated after returning from local view #39988

Closed
opened 2014-05-01 21:25:34 +02:00 by Willi · 6 comments

System Information
Win7/64

Blender Version
Worked: 2.49b
Broken: 2.53 Beta, including latest build 2.70 4849ca8

Short description of error
Really a minor issue: In 3D view, after returning from local view, the displayed number of selected objects is not updated.

Exact steps for others to reproduce the error

  • In the default scene, select the cube and the lamp.
  • Press [Num ] to go to local view.
  • Deselect all. Info window at the top correclty shows "Objects: 0/3".
  • Press [Num ] again to return to global view. This automatically selects the two objects again but the header still shows "Objects: 0/3". The number of selected lamps is also not updated.

As I said, low priority. :-)

(I'm really not looking for bugs, I just come across them during my work!)

**System Information** Win7/64 **Blender Version** Worked: 2.49b Broken: 2.53 Beta, including latest build 2.70 4849ca8 **Short description of error** Really a minor issue: In 3D view, after returning from local view, the displayed number of selected objects is not updated. **Exact steps for others to reproduce the error** - In the default scene, select the cube and the lamp. - Press [Num \] to go to local view. - Deselect all. Info window at the top correclty shows "Objects: 0/3". - Press [Num \] again to return to global view. This automatically selects the two objects again but the header still shows "Objects: 0/3". The number of selected lamps is also not updated. As I said, low priority. :-) (I'm really not looking for bugs, I just come across them during my work!)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

This issue was referenced by blender/blender-addons-contrib@45163387d2

This issue was referenced by blender/blender-addons-contrib@45163387d25d66b90f8797373a8a406ee94f4ccb

This issue was referenced by 45163387d2

This issue was referenced by 45163387d25d66b90f8797373a8a406ee94f4ccb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 45163387d2.

Closed by commit 45163387d2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39988
No description provided.