Fix T39988: Selected object count invalid after exiting local-view